manifest.yaml
#Version of the kuberneties API we are using
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: cayson-cit270
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: cayson-cit270
  template: 
    metadata:
      labels:
        app: cayson-cit270
    spec:
      containers:
        - name: cayson-cit270
          image: cfantauzzi/cit270
          command: ["npm"]
          args: ["run", "start"]
          ports:
            - containerPort: 443
          resources:
            limits:
              cpu: ".125"
              memory: "500Mi"
            requests:
              cpu: ".1"
              memory: "250Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata: 
  name: cayson-cit270-loadbalancer
spec:
  selector:
    app: cayson-cit270
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
